fix navbar issue

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolioTemplate",
   "version": "2.0.0",
-  "homepage": "https://viral2323.github.io/career-profile",
+  "homepage": "https://viral2323.github.io/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
